--- a/PetFinderProject/PetFinderProject/Modules/PetDetails/View/PetDetails.storyboard
+++ b/PetFinderProject/PetFinderProject/Modules/PetDetails/View/PetDetails.storyboard
@@ -16,18 +16,144 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vW3-F4-mzn">
+                                <rect key="frame" x="0.0" y="59" width="393" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pet Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zY-sH-806">
+                                        <rect key="frame" x="146" y="18" width="101" height="24"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZ9-L2-qqF">
+                                        <rect key="frame" x="0.0" y="10" width="50" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="BsE-Cm-7z2"/>
+                                            <constraint firstAttribute="width" constant="50" id="K1E-eI-e9E"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="chevron.backward" catalog="system"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="lZ9-L2-qqF" firstAttribute="leading" secondItem="vW3-F4-mzn" secondAttribute="leading" id="9aM-Es-L10"/>
+                                    <constraint firstItem="3zY-sH-806" firstAttribute="centerX" secondItem="vW3-F4-mzn" secondAttribute="centerX" id="FQv-AA-pHh"/>
+                                    <constraint firstItem="3zY-sH-806" firstAttribute="centerY" secondItem="vW3-F4-mzn" secondAttribute="centerY" id="TAu-w2-Dui"/>
+                                    <constraint firstItem="lZ9-L2-qqF" firstAttribute="centerY" secondItem="vW3-F4-mzn" secondAttribute="centerY" id="UhE-hO-hQC"/>
+                                    <constraint firstAttribute="height" constant="60" id="Y4l-xw-DPd"/>
+                                </constraints>
+                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="epl-yK-TJq">
+                                <rect key="frame" x="0.0" y="119" width="393" height="699"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y8b-ri-GU2">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="345.66666666666669"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="jLI-ay-X5b">
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="345.66666666666669"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GAS-HN-DWa">
+                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="255.66666666666666"/>
+                                                        <subviews>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gear" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ezs-Vs-YEC">
+                                                                <rect key="frame" x="0.0" y="0.0" width="393" height="256"/>
+                                                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                                            </imageView>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstItem="Ezs-Vs-YEC" firstAttribute="leading" secondItem="GAS-HN-DWa" secondAttribute="leading" id="JVF-jn-lUD"/>
+                                                            <constraint firstItem="Ezs-Vs-YEC" firstAttribute="top" secondItem="GAS-HN-DWa" secondAttribute="top" id="KJU-uc-gRb"/>
+                                                            <constraint firstAttribute="bottom" secondItem="Ezs-Vs-YEC" secondAttribute="bottom" id="Uwx-CQ-1Yx"/>
+                                                            <constraint firstAttribute="trailing" secondItem="Ezs-Vs-YEC" secondAttribute="trailing" id="dCk-o8-sZu"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kfy-Ym-xg8">
+                                                        <rect key="frame" x="0.0" y="285.66666666666669" width="393" height="60"/>
+                                                        <subviews>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="wEk-dS-MfX">
+                                                                <rect key="frame" x="20" y="5" width="353" height="50"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h03-tB-zRp">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="291.66666666666669" height="50"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Le0-qX-ogW">
+                                                                        <rect key="frame" x="311.66666666666669" y="0.0" width="41.333333333333314" height="50"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                            </stackView>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstItem="wEk-dS-MfX" firstAttribute="leading" secondItem="kfy-Ym-xg8" secondAttribute="leading" constant="20" id="9FG-qq-u3b"/>
+                                                            <constraint firstItem="wEk-dS-MfX" firstAttribute="top" secondItem="kfy-Ym-xg8" secondAttribute="top" constant="5" id="KMt-ae-IQ0"/>
+                                                            <constraint firstAttribute="bottom" secondItem="wEk-dS-MfX" secondAttribute="bottom" constant="5" id="Zib-4r-zv1"/>
+                                                            <constraint firstAttribute="trailing" secondItem="wEk-dS-MfX" secondAttribute="trailing" constant="20" id="qMr-HF-5aK"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="jLI-ay-X5b" firstAttribute="top" secondItem="y8b-ri-GU2" secondAttribute="top" id="OOE-bN-lMd"/>
+                                            <constraint firstItem="jLI-ay-X5b" firstAttribute="leading" secondItem="y8b-ri-GU2" secondAttribute="leading" id="UDe-e4-Gxx"/>
+                                            <constraint firstAttribute="bottom" secondItem="jLI-ay-X5b" secondAttribute="bottom" id="aWe-TL-Z6T"/>
+                                            <constraint firstAttribute="trailing" secondItem="jLI-ay-X5b" secondAttribute="trailing" id="ghs-zA-KLN"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="y8b-ri-GU2" firstAttribute="leading" secondItem="epl-yK-TJq" secondAttribute="leading" id="6Lh-sM-4qR"/>
+                                    <constraint firstItem="y8b-ri-GU2" firstAttribute="width" secondItem="epl-yK-TJq" secondAttribute="width" id="XAv-0q-mQs"/>
+                                    <constraint firstItem="y8b-ri-GU2" firstAttribute="top" secondItem="epl-yK-TJq" secondAttribute="top" id="vNI-kE-B1s"/>
+                                    <constraint firstAttribute="bottom" secondItem="y8b-ri-GU2" secondAttribute="bottom" id="w6d-MC-iAu"/>
+                                    <constraint firstAttribute="trailing" secondItem="y8b-ri-GU2" secondAttribute="trailing" id="yD5-0A-JQY"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="0Yl-7m-A6V"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="LeO-IA-wuu"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <constraints>
+                            <constraint firstItem="vW3-F4-mzn" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="1bC-66-cxT"/>
+                            <constraint firstItem="epl-yK-TJq" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="28y-6f-xzh"/>
+                            <constraint firstItem="Ezs-Vs-YEC" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.3" id="7sH-Jh-ZCG"/>
+                            <constraint firstItem="epl-yK-TJq" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="8Mj-i8-0rY"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vW3-F4-mzn" secondAttribute="trailing" id="8lK-fQ-W8N"/>
+                            <constraint firstItem="y8b-ri-GU2" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.485524" priority="250" id="HRS-ot-AJP"/>
+                            <constraint firstItem="epl-yK-TJq" firstAttribute="top" secondItem="vW3-F4-mzn" secondAttribute="bottom" id="JbB-pb-fxX"/>
+                            <constraint firstItem="epl-yK-TJq" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="OvL-Kk-eeT"/>
+                            <constraint firstItem="vW3-F4-mzn" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="ffm-Rc-3Ib"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="-34"/>
+            <point key="canvasLocation" x="130.53435114503816" y="-34.507042253521128"/>
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.backward" catalog="system" width="97" height="128"/>
+        <image name="gear" catalog="system" width="128" height="122"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
