--- a/PetFinderProject/PetFinderProject/CustomViews/PetImageCell/PetImageCell.xib
+++ b/PetFinderProject/PetFinderProject/CustomViews/PetImageCell/PetImageCell.xib
@@ -21,7 +21,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RUo-cI-KNc">
                         <rect key="frame" x="0.0" y="0.0" width="228" height="173"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pLa-1g-ss5">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pLa-1g-ss5">
                                 <rect key="frame" x="0.0" y="0.0" width="228" height="173"/>
                             </imageView>
                         </subviews>
