--- a/PetFinderProject/PetFinderProject/CustomViews/PetInfoCell/PetInfoCell.xib
+++ b/PetFinderProject/PetFinderProject/CustomViews/PetInfoCell/PetInfoCell.xib
@@ -4,8 +4,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="298" height="49"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oe7-Ct-0Dk">
-                                <rect key="frame" x="5" y="14.999999999999998" width="50" height="19.333333333333329"/>
+                                <rect key="frame" x="10" y="14.999999999999998" width="50" height="19.333333333333329"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="X8a-qy-vfj"/>
                                 </constraints>
@@ -31,16 +31,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Sweetie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNc-JK-siC">
-                                <rect key="frame" x="65" y="14.999999999999998" width="223" height="19.333333333333329"/>
+                                <rect key="frame" x="70" y="14.999999999999998" width="218" height="19.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="CellBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="iNc-JK-siC" secondAttribute="trailing" constant="10" id="CT9-da-xhs"/>
-                            <constraint firstItem="Oe7-Ct-0Dk" firstAttribute="leading" secondItem="21E-2q-BcD" secondAttribute="leading" constant="5" id="EWW-N9-c54"/>
+                            <constraint firstItem="Oe7-Ct-0Dk" firstAttribute="leading" secondItem="21E-2q-BcD" secondAttribute="leading" constant="10" id="EWW-N9-c54"/>
                             <constraint firstItem="iNc-JK-siC" firstAttribute="leading" secondItem="Oe7-Ct-0Dk" secondAttribute="trailing" constant="10" id="a9E-Oe-dNI"/>
                             <constraint firstItem="Oe7-Ct-0Dk" firstAttribute="centerY" secondItem="21E-2q-BcD" secondAttribute="centerY" id="b0E-gX-Oso"/>
                             <constraint firstItem="iNc-JK-siC" firstAttribute="centerY" secondItem="21E-2q-BcD" secondAttribute="centerY" id="bVI-nc-hWD"/>
@@ -64,8 +64,8 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="CellBackgroundColor">
+            <color red="0.98400002717971802" green="0.98400002717971802" blue="0.98400002717971802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
